--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -31,8 +31,16 @@ $day-header-height: 60px;
 	#calendar {
 		@extend .relative;
 
-		#booking-form-container {
+		&.no-scroll {
 			position: fixed;
+			width: 100%;
+		}
+
+		#booking-form-container {
+			@extend .pb-5;
+
+			position: absolute;
+			overflow-y: scroll;
 			height: 100vh;
 			width: 100%;
 			background: white;
