--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 @import "booking_form";
 @import "filter";
 @import "input";
+@import "job_card";
 @import "message";
 @import "modal";
 @import "navbar";
