--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,23 +7,23 @@
     <button><%= image_tag "icons/search.svg", alt: "search", width: 16, height: 16 %></button>
   </div>
 
-  <section class="flex bg-blueish-gray py-1 my-3 px-3">
+  <section class="switch flex bg-blueish-gray py-1 my-3 px-3">
     <% if current_user.manager? %>
       <% Job.statuses.keys.first(2).each do |k| %>
-        <%= link_to k,
-                    jobs_path(status: Job.statuses[k]),
+        <%= link_to k, jobs_path(status: Job.statuses[k]), remote: true,
+                    data: { status: Job.statuses[k] },
                     class: "btn w-100 text-center btn-#{params[:status]&.to_i == Job.statuses[k] ? "white" : "transparent"}" %>
       <% end %>
-      <%= link_to "ALL", jobs_path, class: "btn w-100 text-center btn-#{!params[:status] ? "white" : "transparent"}" %>
+      <%= link_to "ALL", jobs_path(status: -1), remote: true,
+                  data: { status: -1 },
+                  class: "btn w-100 text-center btn-#{!params[:status] ? "white" : "transparent"}" %>
     <% else %>
-      <%= link_to "All Listings", jobs_path, class: "btn w-100 text-center btn-#{!params[:status] ? "white" : "transparent"}" %>
-      <%= link_to "Applied for", jobs_path(applied: true), class: "btn w-100 text-center btn-#{params[:applie] ? "white" : "transparent"}" %>
+      <%= link_to "All Listings", jobs_path, class: "btn w-100 text-center btn-#{!params[:applied] ? "white" : "transparent"}" %>
+      <%= link_to "Applied for", jobs_path(applied: true), class: "btn w-100 text-center btn-#{params[:applied] ? "white" : "transparent"}" %>
     <% end %>
   </section>
 
   <section class="jobs bg-blueish-gray px-3">
-    <% @jobs.includes(:manager, job_applications: [profile: { user: :avatar_attachment }]).each do |job| %>
-      <%= render partial: "jobs/#{current_user.role}_card", locals: { job: job } %>
-    <% end %>
+    <%= render partial: "jobs/job_cards", locals: { jobs: @jobs } %>
   </section>
 </div>
