--- a/app/assets/stylesheets/pages/_jobs_index.scss
+++ b/app/assets/stylesheets/pages/_jobs_index.scss
@@ -1,4 +1,17 @@
 .jobs-index {
+	#filter-content {
+		.head {
+			@extend .flex, .justify-content-between, .px-3, .mt-3;
+
+			button {
+				img {
+					width: 24px;
+					height: 24px;
+				}
+			}
+		}
+	}
+
 	section.jobs {
 		.job-card {
 			.skill-pill {
