--- a/app/views/jobs/index.js.erb
+++ b/app/views/jobs/index.js.erb
@@ -18,4 +18,6 @@
   if (!filterContent.classList.contains("none")) {
     filterContent.classList.add("none");
   }
+
+  window.moreTogglerMultiple(true);
 })();
