--- a/app/assets/stylesheets/pages/_profile_edit.scss
+++ b/app/assets/stylesheets/pages/_profile_edit.scss
@@ -96,13 +96,14 @@
     }
   }
 
-  #links-modal, #documents-modal {
+  #links-modal, #documents-modal, .edit-link-modal-bound, .edit-link-modal {
     position: fixed;
     height: 100vh;
     width: 100%;
     background: rgba(0, 0, 0, 0.6);
-    z-index: 1;
+    z-index: 3;
     top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
