--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag "icons/cross.svg", alt: "exit", class: "icon" %>
     <% end %>
     <h1>NEW JOB POST</h1>
-    <%= image_tag "icons/more.svg", alt: "more", class: "icon more" %>
+    <%= image_tag "icons/more.svg", alt: "more", class: "icon more opaque noSelect" %>
   </section>
 
   <section class="content">
@@ -19,7 +19,8 @@
                     required: false %>
         <%= f.input :skill_list, label: "Key skills",
                     wrapper_html: { class: "flex flex-column mb-3" } %>
-        <%= f.input :expertise, collection: Job.expertises.map { |ex| [ex[0].capitalize, ex[0]] },
+        <%= f.input :expertise, label: "Experience level",
+                    collection: Job.expertises.map { |ex| [ex[0].capitalize, ex[0]] },
                     wrapper_html: { class: "flex flex-column mb-3" },
                     required: false %>
         <%= f.input :location, placeholder: "London, United Kingdom",
@@ -28,6 +29,31 @@
         <%= f.input :expiration_date, wrapper_html: { class: "flex flex-column mb-3" },
                     required: false, html5: true, as: :date %>
         <!-- TODO: Add checkbox here with JS functionality that toggles show/hide of date & time columns -->
+        <div class="flex justify-content-between items-end flex-shrink-2">
+          <!-- Start time and end time OR duration input -->
+          <div class="bookingHours w-100">
+            <div class="bookingSpecific">
+              <label class="block textGray nowrap">Hours per day</label>
+              <div class="inputs flex items-center">
+                <%= f.input :start_time, label: false, label_html: { class: "block textGray nowrap" }, input_html: { class: "w-100 start-timepicker border-box" }, as: :string %>
+                <span class="self-centered mx-2"> - </span>
+                <%= f.input :end_time, label: false, input_html: { class: "w-100 end-timepicker border-box" }, as: :string %>
+              </div>
+            </div>
+
+            <!-- Hidden duration -->
+            <div class="bookingDuration none">
+              <%= f.input :duration, label_html: { class: "block textGray" }, input_html:{class: "w-100"} %>
+            </div>
+          </div>
+          <!-- End of left side -->
+
+          <!-- Duration toggler -->
+          <div class="profileTabs border-box flex-grow-1 textSm mr-0" id="tabs">
+            <%= link_to "Duration", "#", id: "duration", class: "tab", data: { turbolinks: false } %>
+            <%= link_to "Specific", "#", id: "specific", class: "tab active", data: { turbolinks: false } %>
+          </div>
+        </div>
         <div>
           <%= f.input :start_time, as: :time, html5: true,
                       wrapper_html: { class: "flex flex-column mb-3" } %>
