--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -12,30 +12,36 @@
       <div class="mx-3">
         <%= f.input :profession, label: "Job title",
                     placeholder: "Photographer",
+                    label_html: { class: "textLightBlack" },
                     wrapper_html: { class: "flex flex-column mb-3" },
                     required: false %>
         <%= f.input :description, placeholder: "Something here",
+                    label_html: { class: "textLightBlack" },
                     wrapper_html: { class: "flex flex-column mb-3" },
                     required: false %>
         <%= f.input :skill_list, label: "Key skills",
+                    label_html: { class: "textLightBlack" },
                     wrapper_html: { class: "flex flex-column mb-3" } %>
         <%= f.input :expertise, label: "Experience level",
                     collection: Job.expertises.map { |ex| [ex[0].capitalize, ex[0]] },
                     wrapper_html: { class: "flex flex-column mb-3" },
+                    label_html: { class: "textLightBlack" },
                     required: false %>
         <%= f.input :location, placeholder: "London, United Kingdom",
                     wrapper_html: { class: "flex flex-column mb-3" },
+                    label_html: { class: "textLightBlack" },
                     required: false %>
         <%= f.input :expiration_date, wrapper_html: { class: "flex flex-column mb-3" },
+                    label_html: { class: "textLightBlack" },
                     required: false, html5: true, as: :date %>
         <!-- TODO: Add checkbox here with JS functionality that toggles show/hide of date & time columns -->
         <div class="flex justify-content-between items-end flex-shrink-2">
           <!-- Start time and end time OR duration input -->
           <div class="bookingHours w-100">
             <div class="bookingSpecific">
-              <label class="block textGray nowrap">Hours per day</label>
+              <label class="block textLightBlack nowrap">Hours per day</label>
               <div class="inputs flex items-center">
-                <%= f.input :start_time, label: false, label_html: { class: "block textGray nowrap" }, input_html: { class: "w-100 start-timepicker border-box" }, as: :string %>
+                <%= f.input :start_time, label: false, label_html: { class: "block textLightBlack nowrap" }, input_html: { class: "w-100 start-timepicker border-box" }, as: :string %>
                 <span class="self-centered mx-2"> - </span>
                 <%= f.input :end_time, label: false, input_html: { class: "w-100 end-timepicker border-box" }, as: :string %>
               </div>
@@ -43,7 +49,7 @@
 
             <!-- Hidden duration -->
             <div class="bookingDuration none">
-              <%= f.input :duration, label_html: { class: "block textGray" }, input_html:{class: "w-100"} %>
+              <%= f.input :duration, label_html: { class: "block textLightBlack" }, input_html:{class: "w-100"} %>
             </div>
           </div>
           <!-- End of left side -->
@@ -54,26 +60,39 @@
             <%= link_to "Specific", "#", id: "specific", class: "tab active", data: { turbolinks: false } %>
           </div>
         </div>
-        <div>
-          <%= f.input :start_time, as: :time, html5: true,
-                      wrapper_html: { class: "flex flex-column mb-3" } %>
-          <%= f.input :end_time, as: :time, html5: true,
-                      wrapper_html: { class: "flex flex-column mb-3" } %>
+
+        <!-- Dates input -->
+        <div class="flex items-end justify-content-between mt-3">
+
+          <div class="dates-input-wrapper">
+            <label for="dates" class="block textLightBlack">Dates</label>
+            <input type="text" name="dates" class="mb-2 w-100 datepicker">
+          </div>
+
+          <div>
+            <%= f.input :weekends, label: "Incl. weekends", input_html: { class: "mr-2" }, label_html: { class: "block textLightBlack nowrap flex items-center" }, wrapper_html: { class: "flex flex-row-reverse items-center mb-2"} %>
+          </div>
         </div>
-        <div>
-          <%= f.input :start_date, as: :date, html5: true,
-                      wrapper_html: { class: "flex flex-column mb-3" } %>
-          <%= f.input :end_date, as: :date, html5: true,
-                      wrapper_html: { class: "flex flex-column mb-3" } %>
-        </div>
+
+        <!-- Hidden inputs for start and end dates -->
+        <%= f.input :start_date, label: "sd", label_html: { class: "block textLightBlack" }, input_html:{class: "mb-2 w-100"}, as: :hidden %>
+
+        <%= f.input :end_date, label: "ed", input_html:{class: "mb-2 w-100"}, as: :hidden %>
+
         <!-- TODO: Add checkbox here with JS functionality that toggles show/hide of date & time columns -->
-        <div class="flex">
+        <div class="flex my-3">
           <%= f.input :rate, label: "Max budget", placeholder: "$250",
-                      wrapper_html: { class: "flex flex-column mb-3 mr-3" },
+                      label_html: { class: "textLightBlack" },
+                      wrapper_html: { class: "flex flex-column mr-3" },
                       required: false %>
-          <%= f.input :price_type, collection: Job.price_types.map { |ex| [ex[0].capitalize, ex[0]] }, wrapper_html: { class: "flex flex-column mb-3" } %>
+          <%= f.input :price_type, collection: Job.price_types.map { |ex| [ex[0].capitalize, ex[0]] },
+                      label_html: { class: "textLightBlack" },
+                      wrapper_html: { class: "flex flex-column w-100" } %>
         </div>
-        <%= f.input :attachments, as: :file, input_html: { multiple: true } %>
+        <%= f.input :attachments, as: :file,
+                    input_html: { multiple: true },
+                    label_html: { class: "textLightBlack" },
+                    wrapper_html: { class: "mb-3" } %>
       </div>
       <div class="separator">
         <div class="mx-3">
