--- a/app/assets/stylesheets/components/_input.scss
+++ b/app/assets/stylesheets/components/_input.scss
@@ -15,6 +15,11 @@ select {
 	&.lg {
 		@extend .textMd;
 	}
+
+	&.error {
+		border: 1px solid $flat-red-3;
+	}
+
 	@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
 		font-size: 16px;
 	}
