--- a/app/views/jobs/_freelancer_card.html.erb
+++ b/app/views/jobs/_freelancer_card.html.erb
@@ -24,7 +24,7 @@
           <%= link_to "Something goes here", "#", class: "action-link" %>
         </div>
       </div>
-      <button type="button" class="trigger"><%= image_tag "icons/more.svg", alt: "Sub-menu", width: 24, height: 24 %></button>
+      <button type="button" class="trigger px-0 ml-2"><%= image_tag "icons/more.svg", alt: "Sub-menu", width: 24, height: 24 %></button>
     </div>
   </div>
 </div>
