--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,7 @@ body {
     }
     .contained {
       width: 600px;
+      height: 100%;
       background-color: white;
       box-shadow: 1px 6px 19px -1px rgba(0, 0, 0, .1);
       padding-bottom: 32px;
