--- a/app/views/jobs/_freelancer_card.html.erb
+++ b/app/views/jobs/_freelancer_card.html.erb
@@ -17,6 +17,9 @@
         <%= image_tag job.manager.user.avatar.service_url, alt: "Company logo", class: "logo avatar avatar-square shadow" %>
       <% end %>
       <p class="text-center mt-2 semi-bold mb-0"><%= job.manager.company.name %></p>
+      <% if current_user.profile.has_applied_for?(job) %>
+        <span class="uppercase freelancer skill-pill brown textSm text-center">Applied</span>
+      <% end %>
     </div>
     <div class="relative">
       <div class="none actions-container">
