change job application status text

--- a/app/assets/stylesheets/config/utilities/_typography.scss
+++ b/app/assets/stylesheets/config/utilities/_typography.scss
@@ -30,6 +30,15 @@
 .textLightBlack {
 	color: $light-black;
 }
+
+.text-dark-5 {
+	color: $flat-dark-5;
+
+	// For compatibility reasons
+	&.alternate {
+		color: #898994;
+	}
+}
 // End of text color
 
 // Text sizing
