--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,5 @@
-// Specific CSS for your home-page
+.homeWrapper {
+  height: 100%;
+  width: 100%;
+  background-image: asset_url("bubbles.png");
+}
