service worker properly set

--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -1,6 +1,6 @@
 {
   "background_color": "white",
-  "description": "Scale your freelance workforce with our freelance management platform",
+  "description": "Reduce your headcount and headache by building your very own freelance workforce. Flxibl is the most efficient way to manage your network of freelancers. Sign up for free today.",
   "display": "fullscreen",
   "name": "Flxibl",
   "icons": [
