--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <% if user_signed_in? %>
       <%= link_to "SIGN OUT BUTTON", destroy_user_session_path, method: :delete %>
     <% else %>
-      <%= link_to "SIGN IN BUTTON", new_user_session_path %>
+      <%#= link_to "SIGN IN BUTTON", new_user_session_path %>
     <% end %>
     <% if user_signed_in? && !(params[:controller] == "conversations" && params[:action] == "show") %>
       <%= render partial: "shared/navbar" %>
