--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,26 @@
 <div class="homeWrapper">
 
-  <div class="homeTitle">
-    <h1>FLXIBL</h1>
+  <div class="homeTitle flex justify-content-center items-center flex-column">
+    <%= image_tag "icons/flxibl-logo", alt: "flxibl-logo", id: "logo" %>
     <p>FREELANCE MANAGEMENT</p>
   </div>
 
   <div class="homeSubTitle">
-    Scale your freelance workforce
+   <p>
+     Scale your freelance <br> workforce
+   </p>
   </div>
 
+  <div class="homeBottom flex justify-content-center px-4">
+    <%= simple_form_for :resource, url: home_invitation_path, html: { class: "w-100"}, method: :post do |f| %>
+      <%= f.input :email, label: false, input_html: { class: "w-100 border-box mb-2 lg"}%>
+      <%= f.submit "Sign up for free",   class: "w-100 btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
+
+<div class="py-2 homeFooter">
+  <p class="text-center">
+    Already have an account? <%= link_to "Sign in", new_session_path(User), class: "textBlue semi-bold" %>
+  </p>
 </div>
