styled & ajaxd create/update ratings

--- a/app/views/profiles/show.js.erb
+++ b/app/views/profiles/show.js.erb
@@ -28,6 +28,9 @@
     } else if ("<%= params[:tab] %>" == "notes") {
       addActiveClass(noteTab);
       [aboutTab, linkTab].forEach(removeActiveClass);
+      if (window.starRating) {
+        window.starRating();
+      }
     }
   }
 })();
