--- a/app/views/ratings/_update_form.html.erb
+++ b/app/views/ratings/_update_form.html.erb
@@ -1,4 +1,9 @@
 <%= simple_form_for rating, remote: true do |f| %>
-  <%= f.input :value, collection: (0..5), required: false, label: false %>
-  <%= f.submit %>
+  <% 5.times do |i| %>
+    <button class="p-0 star-rating" type="button">
+      <%= image_tag "icons/rating.svg", alt: "rating" %>
+    </button>
+  <% end %>
+  <%= f.input :value, as: :hidden, wrapper: false %>
+  <%= f.submit "Submit", id: "submit", class: "none" %>
 <% end %>
