removed wrongful padding and registerable

--- a/app/views/pages/mail.html.erb
+++ b/app/views/pages/mail.html.erb
@@ -1,6 +1,6 @@
 <div class="mail">
   <section class="mx-3 pt-4 flex justify-content-between items-center">
-    <%= link_to new_user_registration_path do %>
+    <%= link_to new_user_session_path do %>
       <%= image_tag "icons/left-arrow.svg", alt: "back", class: "icon", height: 16, width: 16 %>
     <% end %>
     <p class="textDarkGray uppercase">Sign up</p>
