--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -31,7 +31,7 @@
 
       <%= f.input :location, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg"}, wrapper_html: { class: "px-3 overflow-hidden"} %>
       <div class="flex justify-content-end p-3 items-center">
-        <button class="next-step" type="button"><%= image_tag "icons/arrow-right.svg", alt: "submit", width: 16, height: 16 %></button>
+        <div class="next-step flex justify-content-center items-center"><%= image_tag "icons/arrow-right.svg", width: 16, height: 16 %></div>
       </div>
   </div>
   <!-- End of Step 1 -->
@@ -42,7 +42,7 @@
       <%= link_to profile_path(@profile) do %>
         <%= image_tag "icons/cross.svg", alt: "back link", width: 24, height: 24, class: "mr-2 textSm p-3 mt-3" %>
       <% end %>
-      <%= f.input :overview, as: :text, label: "Professional Summary", required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 h-100 mt-2 border-box lg" }, wrapper_html: { class: "px-3"}  %>
+      <%= f.input :overview, as: :text, label: "Professional Summary", required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 h-100 mt-2 border-box lg", form: "edit_profile_#{@profile.id}" }, wrapper_html: { class: "px-3"}  %>
     <% end %>
     <!-- End of the main form -->
 
@@ -116,7 +116,7 @@
         </label>
       </div>
 
-      <div class="px-3 mt-5">
+      <div class="px-3 mt-5 block">
         <button type="submit" form="edit_profile_<%= @profile.id %>" class="btn btn-primary my-3 save w-100" />
           <%= image_tag("icons/save", alt: "save", class: "mr-2") %>
           SAVE
