get rid of navbar new and edit pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     <% else %>
       <%#= link_to "SIGN IN BUTTON", new_user_session_path %>
     <% end %>
-    <% if user_signed_in? && !(params[:controller] == "conversations" && params[:action] == "show") %>
+    <% if should_navbar? %>
       <%= render partial: "shared/navbar" %>
     <% end %>
   </body>
