make opaque icons that serve no purpose

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag "icons/cross.svg", alt: "exit", class: "icon", height: 16, width: 16 %>
   <% end %>
   <p class="textDarkGray">NEW BOOKING</p>
-  <%= image_tag "icons/more.svg", alt: "more", class: "icon more", height: 24, width: 24 %>
+  <%= image_tag "icons/more.svg", alt: "more", class: "icon more opaque", height: 24, width: 24 %>
 </section>
 
 <section class="flex p-3">
