--- a/app/views/managers/index.html.erb
+++ b/app/views/managers/index.html.erb
@@ -1,7 +1,7 @@
 <div id="managers-index">
   <section class="head">
     <button>
-      <%= image_tag "icons/search.svg", alt: "search" %>
+      <%= image_tag "icons/search.svg", alt: "search", class: "opaque" %>
     </button>
     <div class="flex flex-column items-center justify-content-center">
       <p class="m-0">CLIENTS (<%= @managers.length %>)</p>
