--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -98,3 +98,13 @@
   top: 8px;
   width: -webkit-fill-available;
 }
+
+@media (min-width: 688px) {
+  .headerOptions {
+    position: relative;
+  }
+
+  .profileBanner {
+    height: 60vh;
+  }
+}
