--- a/app/views/connections/ajax_create.js.erb
+++ b/app/views/connections/ajax_create.js.erb
@@ -12,7 +12,7 @@
   const removePersonIconPath = "<%= image_path 'icons/user-minus' %>";
   const formAuthenticityToken = "<%= form_authenticity_token %>";
   const destroyConnectionPath = "<%= connection_path(@profile.user.find_connection(current_user)) %>"
-  const removeButtonHTML = `<form class="button_to" method="post" action="${destroyConnectionPath}" data-remote="true"><input type="hidden" name="_method" value="delete"><button class="action-link flex items-center w-100" type="submit">
+  const removeButtonHTML = `<form class="button_to" method="post" action="${destroyConnectionPath}" data-remote="true"><input type="hidden" name="_method" value="delete"><button class="action-link flex items-center w-100 textMd" type="submit">
       <img alt="remove user" width="24" height="24" class="mr-3" src="${removePersonIconPath}">
       REMOVE
   </button><input type="hidden" name="authenticity_token" value="${formAuthenticityToken}"></form>`
