--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -13,7 +13,7 @@
             <div class="actions flex flex-column job-show">
               <% connection ||= current_user.find_connection(@profile.user) %>
               <% if connection %>
-                <%= button_to connection_path(connection), method: :delete, class: "action-link flex items-center w-100", remote: true do %>
+                <%= button_to connection_path(connection), method: :delete, class: "action-link flex items-center w-100 textMd", remote: true do %>
                   <%= image_tag "icons/user-minus", alt: "remove user", width: 24, height: 24, class: "mr-3" %>
                   REMOVE
                 <% end %>
