adjust for firefox

--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -1,7 +1,7 @@
 <div class="generalProfile w-100">
 
   <div class="profileBanner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(255,255,255,0.2)), url(<%= avatar_url(@profile) %>)">
-    <div class="headerOptions flex w-100 justify-content-between p-3">
+    <div class="headerOptions border-box flex w-100 justify-content-between p-3">
       <div>
         <%= link_to :back do %>
           <%= image_tag "icons/left-arrow-white.svg", alt: "back link", width: 24, height: 24, class: "mr-2 textSm" %>
