--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,6 +9,7 @@
 @import "message";
 @import "modal";
 @import "navbar";
+@import "notification";
 @import "profile_card";
 @import "skill_pill";
 @import "profile_tabs";
