changed label of duration

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -42,7 +42,7 @@
 
           <!-- Hidden duration -->
           <div class="bookingDuration none">
-            <%= f.input :duration, label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"} %>
+            <%= f.input :duration, label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"}, label: "Hours per day" %>
           </div>
         </div>
         <!-- End of left side -->
